test/users/brodtkorb/coercionQuestion.good
coercionQuestion.chpl:2: error: unresolved call '<=(1.1, 1)'
